<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/AppTheme.TextView.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/error_load_counters_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/half_margin_vertical"
        android:gravity="center"
        android:text="@string/connection_error_description"
        android:textColor="@color/gray" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/text_view_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical"
        android:foreground="?selectableItemBackgroundBorderless"
        android:gravity="center"
        android:text="@string/retry"
        android:textColor="@color/orange"
        app:textAllCaps="true" />

</androidx.appcompat.widget.LinearLayoutCompat>